人气推荐布局&样式

--- a/index.html
+++ b/index.html
@@ -419,5 +419,199 @@
 				<div class="next">></div>
 			</div>
 		</section>
+		
+		<!--人气推荐-->
+		<section id="recommend">
+			<div class="center">
+				<header class="clearfix">
+					<div class="left">
+						<h3>人气推荐</h3>
+						<ul>
+							<li class="active">编辑推荐</li>
+							<li>人气周榜</li>
+							<li>热销总榜</li>
+						</ul>
+					</div>
+					<div class="right">
+						<a href="#">更多推荐 ></a>
+					</div>
+				</header>
+				
+				<div class="content clearfix">
+					<div class="box">
+						<span class="colorNum">1色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_13.png"/></a>
+						<div class="title">
+							<a href="#">简约陶瓷马克杯</a>
+							<p>￥14</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">2色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_14.png"/></a>
+						<div class="title">
+							<a href="#"> 浓缩即食燕窝 70克*3瓶 99%</a>
+							<p>￥24</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">3色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_15.png"/></a>
+						<div class="title">
+							<a href="#"> 网易智造N520除螨吸尘器</a>
+							<p>￥34</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">4色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_16.png"/></a>
+						<div class="title">
+							<a href="#"> 多功能人体工学转椅</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">5色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_17.png"/></a>
+						<div class="title">
+							<a href="#"> 24寸 纯PC“铝框”（非全铝）拉杆箱</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">6色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_18.png"/></a>
+						<div class="title">
+							<a href="#"> 英伦温莎轻雅双肩包 13L</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">7色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_19.png"/></a>
+						<div class="title">
+							<a href="#"> 日式和风声波式电动牙刷（可单买刷头）</a>
+							<p>￥44</p>
+						</div>
+					</div>
+				</div>
+				<div class="content clearfix">
+					<div class="box">
+						<span class="colorNum">21色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_13.png"/></a>
+						<div class="title">
+							<a href="#">简约陶瓷马克杯</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">2色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_14.png"/></a>
+						<div class="title">
+							<a href="#"> 浓缩即食燕窝 70克*3瓶 99%</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">3色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_15.png"/></a>
+						<div class="title">
+							<a href="#"> 网易智造N520除螨吸尘器</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">4色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_16.png"/></a>
+						<div class="title">
+							<a href="#"> 多功能人体工学转椅</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">5色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_17.png"/></a>
+						<div class="title">
+							<a href="#"> 24寸 纯PC“铝框”（非全铝）拉杆箱</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">6色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_18.png"/></a>
+						<div class="title">
+							<a href="#"> 英伦温莎轻雅双肩包 13L</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">7色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_19.png"/></a>
+						<div class="title">
+							<a href="#"> 日式和风声波式电动牙刷（可单买刷头）</a>
+							<p>￥44</p>
+						</div>
+					</div>
+				</div>
+				<div class="content clearfix">
+					<div class="box">
+						<span class="colorNum">31色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_13.png"/></a>
+						<div class="title">
+							<a href="#">简约陶瓷马克杯</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">2色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_14.png"/></a>
+						<div class="title">
+							<a href="#"> 浓缩即食燕窝 70克*3瓶 99%</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">3色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_15.png"/></a>
+						<div class="title">
+							<a href="#"> 网易智造N520除螨吸尘器</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">4色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_16.png"/></a>
+						<div class="title">
+							<a href="#"> 多功能人体工学转椅</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">5色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_17.png"/></a>
+						<div class="title">
+							<a href="#"> 24寸 纯PC“铝框”（非全铝）拉杆箱</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">6色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_18.png"/></a>
+						<div class="title">
+							<a href="#"> 英伦温莎轻雅双肩包 13L</a>
+							<p>￥44</p>
+						</div>
+					</div>
+					<div class="box">
+						<span class="colorNum">7色可选</span>
+						<a href="#" class="scaleImg"><img src="images/img_19.png"/></a>
+						<div class="title">
+							<a href="#"> 日式和风声波式电动牙刷（可单买刷头）</a>
+							<p>￥44</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
