限时购结构

--- a/index.html
+++ b/index.html
@@ -647,6 +647,52 @@
 							<div>
 								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
 							</div>
+							<a href="#" class="qianggou">立即抢购</a>
+						</div>
+					</div>
+					<div class="limitBox clearfix">
+						<a href="#" class="left scaleImg"><img src="images/img_23.png"/></a>
+						<div class="right">
+							<a href="#" class="title">复古翻帮休闲女鞋</a>
+							<p>翻帮设计，复古法国风</p>
+							<div class="numBar clearfix">
+								<div class="numCon"><span></span></div>
+								<span class="numTips">还剩321件</span>
+							</div>
+							<div>
+								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+							</div>
+							<a href="#" class="qianggou">立即抢购</a>
+						</div>
+					</div>
+					<div class="limitBox clearfix">
+						<a href="#" class="left scaleImg"><img src="images/img_21.png"/></a>
+						<div class="right">
+							<a href="#" class="title">复古翻帮休闲女鞋</a>
+							<p>翻帮设计，复古法国风</p>
+							<div class="numBar clearfix">
+								<div class="numCon"><span></span></div>
+								<span class="numTips">还剩321件</span>
+							</div>
+							<div>
+								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+							</div>
+							<a href="#" class="qianggou">立即抢购</a>
+						</div>
+					</div>
+					<div class="limitBox clearfix">
+						<a href="#" class="left scaleImg"><img src="images/img_22.png"/></a>
+						<div class="right">
+							<a href="#" class="title">复古翻帮休闲女鞋</a>
+							<p>翻帮设计，复古法国风</p>
+							<div class="numBar clearfix">
+								<div class="numCon"><span></span></div>
+								<span class="numTips">还剩321件</span>
+							</div>
+							<div>
+								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+							</div>
+							<a href="#" class="qianggou">立即抢购</a>
 						</div>
 					</div>
 				</div>
