--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 								<span class="numTips">还剩321件</span>
 							</div>
 							<div>
-								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+								<span class="xianshi">限时价</span><span class="fuhao">￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
 							</div>
 							<a href="#" class="qianggou">立即抢购</a>
 						</div>
@@ -660,7 +660,7 @@
 								<span class="numTips">还剩321件</span>
 							</div>
 							<div>
-								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+								<span class="xianshi">限时价</span><span class="fuhao">￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
 							</div>
 							<a href="#" class="qianggou">立即抢购</a>
 						</div>
@@ -675,7 +675,7 @@
 								<span class="numTips">还剩321件</span>
 							</div>
 							<div>
-								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+								<span class="xianshi">限时价</span><span class="fuhao">￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
 							</div>
 							<a href="#" class="qianggou">立即抢购</a>
 						</div>
@@ -690,7 +690,7 @@
 								<span class="numTips">还剩321件</span>
 							</div>
 							<div>
-								<span class="xianshi">限时价</span><span>￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
+								<span class="xianshi">限时价</span><span class="fuhao">￥</span><strong>199</strong><span class="yuanjia">原价￥249</span>
 							</div>
 							<a href="#" class="qianggou">立即抢购</a>
 						</div>
