--- a/index.html
+++ b/index.html
@@ -698,5 +698,64 @@
 				</div>
 			</div>
 		</section>
+		
+		<!--居家-->
+		<section class="category">
+			<header class="clearfix">
+				<div class="left">
+					<h3>居家</h3><span>回家，放松身心</span>
+				</div>
+				<div class="right">
+					<a href="#" class="more">更多推荐 ></a>
+					<ul>
+						<li>
+							<a href="#">被枕</a>/
+						</li>
+						<li>
+							<a href="#">床垫</a>/
+						</li>
+						<li>
+							<a href="#">地垫</a>/
+						</li>
+						<li>
+							<a href="#">舒坐</a>/
+						</li>
+						<li>
+							<a href="#">灯具</a>/
+						</li>
+						<li>
+							<a href="#">床品件套</a>/
+						</li>
+						<li>
+							<a href="#">家饰</a>
+						</li>
+					</ul>
+				</div>
+			</header>
+			
+			<a href="#" class="categoryBigImg"><img src="images/img_24.jpg"/></a>
+			<ul class="categoryList">
+				<li>
+					<a href="#" class="scaleImg"><img src="images/img_25.png"/></a>
+					<p><a href="#">日式记忆棉坐垫</a></p>
+					<span>￥49</span>
+				</li>
+				<li>
+					<a href="#" class="scaleImg"><img src="images/img_26.png"/></a>
+					<p><a href="#">日式记忆棉坐垫</a></p>
+					<span>￥49</span>
+				</li>
+				<li>
+					<a href="#" class="scaleImg"><img src="images/img_27.png"/></a>
+					<p><a href="#">日式记忆棉坐垫</a></p>
+					<span>￥49</span>
+				</li>
+				<li>
+					<a href="#" class="scaleImg"><img src="images/img_28.png"/></a>
+					<p><a href="#">日式记忆棉坐垫</a></p>
+					<span>￥49</span>
+				</li>
+			</ul>
+		</section>
 	</body>
 </html>
