大家都在说样式结构

--- a/index.html
+++ b/index.html
@@ -757,5 +757,75 @@
 				</li>
 			</ul>
 		</section>
+		
+		<!--大家都在说-->
+		<section id="say">
+			<div class="center">
+				<header>
+					<h3>大家都在说</h3>
+					<span>生活没有统一的标准</span>
+				</header>
+				<div class="content" id="sayPic">
+					<div class="carouselImgCon">
+						<ul>
+							<li>
+								<a href="#" class="scaleImg"><img src="images/img_29.jpg"/></a>
+								<div>
+									<p>塞****微 2018-03-29 17:37</p>
+									<p class="clearfix">
+										<span class="left">星星珊瑚绒宠物窝</span>
+										<span class="right">￥59</span>
+									</p>
+									<p>
+										鞋子非常耐穿，搭配短裤露腿超级好看，建议搭长袜，完美
+									</p>
+								</div>
+							</li>
+							<li>
+								<a href="#" class="scaleImg"><img src="images/img_30.jpg"/></a>
+								<div>
+									<p>塞****微 2018-03-29 17:37</p>
+									<p class="clearfix">
+										<span class="left">星星珊瑚绒宠物窝</span>
+										<span class="right">￥59</span>
+									</p>
+									<p>
+										鞋子非常耐穿，搭配短裤露腿超级好看，建议搭长袜，完美
+									</p>
+								</div>
+							</li>
+							<li>
+								<a href="#" class="scaleImg"><img src="images/img_31.jpg"/></a>
+								<div>
+									<p>塞****微 2018-03-29 17:37</p>
+									<p class="clearfix">
+										<span class="left">星星珊瑚绒宠物窝</span>
+										<span class="right">￥59</span>
+									</p>
+									<p>
+										鞋子非常耐穿，搭配短裤露腿超级好看，建议搭长袜，完美
+									</p>
+								</div>
+							</li>
+							<li>
+								<a href="#" class="scaleImg"><img src="images/img_32.jpg"/></a>
+								<div>
+									<p>塞****微 2018-03-29 17:37</p>
+									<p class="clearfix">
+										<span class="left">星星珊瑚绒宠物窝</span>
+										<span class="right">￥59</span>
+									</p>
+									<p>
+										鞋子非常耐穿，搭配短裤露腿超级好看，建议搭长袜，完美
+									</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="prev"><</div>
+					<div class="next">></div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
