--- a/index.html
+++ b/index.html
@@ -827,5 +827,59 @@
 				</div>
 			</div>
 		</section>
+		
+		<!--底部-->
+		<footer>
+			<div class="message">
+				<div class="center">
+					<div class="box">
+						<h4>客服电话</h4>
+						<p class="phone">400-0368-163</p>
+						<p class="workTime">9:00-22:00</p>
+						<div class="btn">
+							<a href="#">用户反馈</a><a href="#">在线客服</a>
+						</div>
+					</div>
+					<div class="box">
+						<h4>何为严选</h4>
+						<p>网易原创生活类电商品牌，秉承网易一贯的严谨态度，我们深入世界各地，从源头全程严格把控商品生产环节，力求帮消费者甄选到优质的商品</p>
+						<dl class="clearfix">
+							<dt>关注我们:</dt>
+							<dd><a href="#"><img src="images/ico_05.gif"/></a></dd>
+							<dd><a href="#"><img src="images/ico_06.gif"/></a</dd>
+							<dd><a href="#"><img src="images/ico_07.gif"/></a></dd>
+						</dl>
+					</div>
+					<div class="box">
+						<h4>扫码下载严选APP</h4>
+						<img src="images/down.png"/>
+						<p class="disC">下载领1000元新人礼包</p>
+					</div>
+				</div>
+			</div>
+			<div class="foot">
+				<div class="center">
+					<div class="title">
+						<div>30天无忧退换货</div>
+						<div>满88元免邮费</div>
+						<div>网易品质保证</div>
+					</div>
+					<div class="copy">
+						<p><a href="#">关于我们</a> | <a href="#">帮助中心</a> | <a href="#">售后服务</a> | <a href="#">配送与验收</a> | <a href="#">商务合作</a> | <a href="#">企业采购</a> | <a href="#">开放平台</a> | <a href="#">搜索推荐</a> | <a href="#">友情链接</a></p>
+						<p>网易公司版权所有 &copy; 1997-2018   食品经营许可证：JY13301080111719 出版物经营许可证：新出发滨字第0132号</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+		
+		<!--底部fix侧边栏-->
+		<div id="sideBar">
+			<div class="top">
+				<a href="#">新人有礼</a>
+				<a href="#">下载APP</a>
+				<a href="#">在线客服</a>
+			</div>
+			<a href="javascript:;" class="back">回顶部</a>
+		</div>
 	</body>
 </html>
