--- a/product.html
+++ b/product.html
@@ -1,21 +1,311 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 	</head>
 	<body>
+		<header id="head">
+			<!--页面头-->
+			<div class="head">
+				<div class="center clearfix">
+					<div class="left">好的生活，没那么贵</div>
+					<div class="right">
+						<ul>
+							<li><a href="#" class="noborder">登陆</a></li>
+							<li><a href="#" class="noborder margin">注册</a></li>
+							<li><a href="#">我的订单</a></li>
+							<li><a href="#">会员</a></li>
+							<li><a href="#">甄选家</a></li>
+							<li><a href="#">企业采购</a></li>
+							<li class="customer">
+								<a href="#">客户服务</a>
+								<ul>
+									<li><a href="#">在线客服</a></li>
+									<li><a href="#">帮助中心</a></li>
+									<li class="phone">
+										<a href="#">电话客服</a>
+										<div>
+											<p>400-0368-163</p>
+											<p>9:00-22:00</p>
+										</div>
+									</li>
+									<li><a href="#">商务合作</a></li>
+									<li class="noborder"><a href="#">开放平台</a></li>
+								</ul>
+							</li>
+							<li class="down">
+								<a href="#">APP</a>
+								<div>
+									<img src="images/down.png"/>
+									<span>扫码下载 首单立减8元</span>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+			<!--搜索栏-->
+			<div class="search">
+				<div class="center clearfix">
+					<h1><a href="http://you.163.com"><img src="images/logo.gif" alt="网易严选"/></a></h1>
+					<div class="searchBox">
+						<input type="text" value="超值囤货装买3免1" />
+						<a href="javascript:;"></a>
+					</div>
+				</div>
+			</div>
+
+			<!--吸顶导航-->
+			<nav class="nav" id="-navFix">
+				<div class="center clearfix">
+					<a href="javascript:;" class="logo"><img src="images/smallLogo.gif"/></a>
+					<ul class="navbar">
+						<li class="active"><a href="#">首页</a></li>
+						<li><a href="#">居家</a></li>
+						<li><a href="#">配件</a></li>
+						<li><a href="#">服装</a></li>
+						<li><a href="#">电器</a></li>
+						<li><a href="#">洗护</a></li>
+						<li><a href="#">饮食</a></li>
+						<li><a href="#">餐厨</a></li>
+						<li><a href="#">婴童</a></li>
+						<li><a href="#">文体</a></li>
+						<li><a href="#">特色区</a></li>
+						<li class="separate">|</li>
+						<li><a href="#">为你严选</a></li>
+						<li><a href="#">众筹</a></li>
+						<div class="cartWrap">
+							<i>0</i>
+							<div class="cart">
+								<div class="list clearfix">
+									<ul>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+									</ul>
+									<div class="scrollBar">
+										<span class="topBtn"></span>
+										<div class="slideWrap">
+											<div class="slide"></div>
+										</div>
+										<span class="bottomBtn"></span>
+									</div>
+								</div>
+								<div class="total">
+									商品合计：<span>￥751.00</span><a href="#">去购物车结算</a>
+								</div>
+							</div>
+						</div>
+						<div class="login">
+							<a href="#">登录</a>
+							<a href="#">注册</a>
+						</div>
+					</ul>
+				</div>
+				<div class="subnav">
+					<ul style="display: block;">
+						<li><a href="#"><img src="images/nav_01.png"/></a>1被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>2被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>3被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>4被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>5被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>6被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>7被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>8被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>9被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>10被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>11被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		
+		<!--底部-->
+		<footer>
+			<div class="message">
+				<div class="center">
+					<div class="box">
+						<h4>客服电话</h4>
+						<p class="phone">400-0368-163</p>
+						<p class="workTime">9:00-22:00</p>
+						<div class="btn">
+							<a href="#">用户反馈</a><a href="#">在线客服</a>
+						</div>
+					</div>
+					<div class="box">
+						<h4>何为严选</h4>
+						<p>网易原创生活类电商品牌，秉承网易一贯的严谨态度，我们深入世界各地，从源头全程严格把控商品生产环节，力求帮消费者甄选到优质的商品</p>
+						<dl class="clearfix">
+							<dt>关注我们:</dt>
+							<dd><a href="#"><img src="images/ico_05.gif"/></a></dd>
+							<dd><a href="#"><img src="images/ico_06.gif"/></a</dd>
+							<dd><a href="#"><img src="images/ico_07.gif"/></a></dd>
+						</dl>
+					</div>
+					<div class="box">
+						<h4>扫码下载严选APP</h4>
+						<img src="images/down.png"/>
+						<p class="disC">下载领1000元新人礼包</p>
+					</div>
+				</div>
+			</div>
+			<div class="foot">
+				<div class="center">
+					<div class="title">
+						<div>30天无忧退换货</div>
+						<div>满88元免邮费</div>
+						<div>网易品质保证</div>
+					</div>
+					<div class="copy">
+						<p><a href="#">关于我们</a> | <a href="#">帮助中心</a> | <a href="#">售后服务</a> | <a href="#">配送与验收</a> | <a href="#">商务合作</a> | <a href="#">企业采购</a> | <a href="#">开放平台</a> | <a href="#">搜索推荐</a> | <a href="#">友情链接</a></p>
+						<p>网易公司版权所有 &copy; 1997-2018   食品经营许可证：JY13301080111719 出版物经营许可证：新出发滨字第0132号</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+		
+		<!--底部fix侧边栏-->
+		<div id="sideBar">
+			<div class="top">
+				<a href="#">新人有礼</a>
+				<a href="#">下载APP</a>
+				<a href="#">在线客服</a>
+			</div>
+			<a href="javascript:;" class="back">回顶部</a>
+		</div>
 	</body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
-</html>
->>>>>>> 1e69abe8e5d0da6dea37cde99a40073e1a45164c
+
