--- a/product.html
+++ b/product.html
@@ -253,6 +253,13 @@
 			</nav>
 		</header>
 		
+		<!--面包屑-->
+		<section id="position">
+			<div class="center">
+				<a href="#">首页</a> > <a href="#">其它</a> > <a href="#">数码</a> > 网易智造空气感苹果手机壳
+			</div>
+		</section>
+		
 		<!--底部-->
 		<footer>
 			<div class="message">
