--- a/product.html
+++ b/product.html
@@ -260,6 +260,54 @@
 			</div>
 		</section>
 		
+		<!--产品图片-->
+		<section id="productImg" class="clearfix">
+			<div class="left">
+				<img src="images/img_35.jpg"/>
+				<div class="right smallImg">
+					<img src="images/img_35.jpg" class="active"/>
+					<img src="images/img_36.jpg"/>
+					<img src="images/img_37.jpg"/>
+					<img src="images/img_38.jpg"/>
+					<img src="images/img_39.jpg"/>
+				</div>
+			</div>
+			<div class="info right">
+				<h2>网易智造空气感苹果手机壳</h2>
+				<p>0.4mm纸一样薄 磨砂手感</p>
+				<div class="price">
+					<div><span>售价</span><strong>￥38.00</strong></div>
+					<div><span>促销</span><a href="#" class="tag">愚人节</a><a href="#" class="discount">领全场满减券，额外机会包裹翻倍</a></div>
+					<div><span>服务</span><a href="#" class="service"><i></i>30天无忧退货<i></i>48小时快速退款<i></i>满88元免邮费<i></i>网易自营品牌</a></div>
+				</div>
+				<div class="fomat">
+					<dl class="clearfix">
+						<dt>型号</dt>
+						<dd class="active">iPhone 7</dd>
+						<dd>iPhone 7 Plus</dd>
+					</dl>
+					<dl class="clearfix">
+						<dt>颜色</dt>
+						<dd class="active">清透黑</dd>
+						<dd>纯净白</dd>
+					</dl>
+				</div>
+				<div class="number">
+					<span class="nTitle">数量</span>
+					<div class="noClick">
+						<span>-</span>
+						<input type="text" value="1" />
+						<span>+</span>
+					</div>
+				</div>
+				<div class="btn">
+					<a href="#" class="buy">立即购买</a>
+					<a href="#" class="join">加入购物车</a>
+					<a href="#" class="collection">收藏</a>
+				</div>
+			</div>
+		</section>
+		
 		<!--底部-->
 		<footer>
 			<div class="message">
