产品图片结构&样式

--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
+		<link rel="stylesheet" type="text/css" href="css/product.css"/>
 	</head>
 	<body>
 		<header id="head">
@@ -280,19 +281,19 @@
 					<div><span>促销</span><a href="#" class="tag">愚人节</a><a href="#" class="discount">领全场满减券，额外机会包裹翻倍</a></div>
 					<div><span>服务</span><a href="#" class="service"><i></i>30天无忧退货<i></i>48小时快速退款<i></i>满88元免邮费<i></i>网易自营品牌</a></div>
 				</div>
-				<div class="fomat">
+				<div class="format">
 					<dl class="clearfix">
 						<dt>型号</dt>
-						<dd class="active">iPhone 7</dd>
+						<dd class="">iPhone 7</dd>
 						<dd>iPhone 7 Plus</dd>
 					</dl>
 					<dl class="clearfix">
 						<dt>颜色</dt>
-						<dd class="active">清透黑</dd>
+						<dd class="">清透黑</dd>
 						<dd>纯净白</dd>
 					</dl>
 				</div>
-				<div class="number">
+				<div class="number clearfix">
 					<span class="nTitle">数量</span>
 					<div class="noClick">
 						<span>-</span>
