大家都在看fin

--- a/product.html
+++ b/product.html
@@ -309,6 +309,60 @@
 			</div>
 		</section>
 		
+		<!--大家都在看-->
+		<section id="look">
+			<div class="center">
+				<h3>大家都在看</h3>
+				<div class="content clearfix" id="lookPic">
+					<div class="carouselImgCon">
+						<ul>
+							<li>
+								<a href="#"><img src="images/img_40.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥18</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_41.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥18</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_42.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥18</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_43.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥43.00</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_44.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥390.00</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_45.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥18</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_46.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥18</span>
+							</li>
+							<li>
+								<a href="#"><img src="images/img_47.png"/></a>
+								<a href="#">网易智造安卓快充数据线</a>
+								<span>￥18.00</span>
+							</li>
+						</ul>
+					</div>
+					<div class="prev noClick"><</div>
+					<div class="next">></div>
+				</div>
+			</div>
+		</section>
 		<!--底部-->
 		<footer>
 			<div class="message">
