--- a/product.html
+++ b/product.html
@@ -467,8 +467,8 @@
 														</ul>
 													</div>
 													<div class="close">×</div>
-													<div class="prev"></div>
-													<div class="next"></div>
+													<div class="prev"><</div>
+													<div class="next">></div>
 												</div>
 											</div>
 										</li>
@@ -501,8 +501,8 @@
 														</ul>
 													</div>
 													<div class="close">×</div>
-													<div class="prev"></div>
-													<div class="next"></div>
+													<div class="prev"><</div>
+													<div class="next">></div>
 												</div>
 											</div>
 										</li>
@@ -535,8 +535,8 @@
 														</ul>
 													</div>
 													<div class="close">×</div>
-													<div class="prev"></div>
-													<div class="next"></div>
+													<div class="prev"><</div>
+													<div class="next">></div>
 												</div>
 											</div>
 										</li>
@@ -569,8 +569,8 @@
 														</ul>
 													</div>
 													<div class="close">×</div>
-													<div class="prev"></div>
-													<div class="next"></div>
+													<div class="prev"><</div>
+													<div class="next">></div>
 												</div>
 											</div>
 										</li>
