--- a/product.html
+++ b/product.html
@@ -580,7 +580,7 @@
 								<span>首页</span>
 								<span>上一页</span>
 								<div class="mainPage">
-									<span>1</span>
+									<span class="active">1</span>
 									<span>2</span>
 									<span>3</span>
 									<span>4</span>
@@ -600,7 +600,27 @@
 				</div>
 				<!--专题推荐-->
 				<div class="special">
-					
+					<h3>专题推荐</h3>
+					<div>
+						<a href="#"><img src="images/img_52.jpg" alt="" /></a>
+						<a href="#">好东西不该只用来凑单</a>
+					</div>
+					<div>
+						<a href="#"><img src="images/img_52.jpg" alt="" /></a>
+						<a href="#">好东西不该只用来凑单</a>
+					</div>
+					<div>
+						<a href="#"><img src="images/img_52.jpg" alt="" /></a>
+						<a href="#">好东西不该只用来凑单</a>
+					</div>
+					<div>
+						<a href="#"><img src="images/img_52.jpg" alt="" /></a>
+						<a href="#">好东西不该只用来凑单</a>
+					</div>
+					<div>
+						<a href="#"><img src="images/img_52.jpg" alt="" /></a>
+						<a href="#">好东西不该只用来凑单</a>
+					</div>
 				</div>
 			</div>
 		</section>
