吸顶导航功能

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					</ul>
 				</div>
 				<div class="subnav">
-					<ul style="display: block;">
+					<ul>
 						<li><a href="#"><img src="images/nav_01.png"/></a>1被枕</li>
 						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
 						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
@@ -232,16 +232,6 @@
 					</ul>
 					<ul>
 						<li><a href="#"><img src="images/nav_01.png"/></a>10被枕</li>
-						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-					</ul>
-					<ul>
-						<li><a href="#"><img src="images/nav_01.png"/></a>11被枕</li>
 						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
 						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
 						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
@@ -881,5 +871,8 @@
 			</div>
 			<a href="javascript:;" class="back">回顶部</a>
 		</div>
+		
+		<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
