--- a/index.html
+++ b/index.html
@@ -280,23 +280,23 @@
 				<div class="bBox">
 					<h4>MUJI制造商</h4>
 					<span>12.9元起</span>
-					<a href="#" class="scaleImg"><img src="images/img_01.jpg"/></a>
+					<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_01.jpg"/></a>
 				</div>
 				<div class="bBox">
 					<h4>新秀丽制造商</h4>
 					<span>12.9元起</span>
-					<a href="#" class="scaleImg"><img src="images/img_02.jpg"/></a>
+					<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_02.jpg"/></a>
 				</div>
 				<div class="bBox">
 					<div>
 						<h4>Adidas制造商</h4>
 						<span>49元起</span>
-						<a href="#" class="scaleImg"><img src="images/img_03.jpg"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_03.jpg"/></a>
 					</div>
 					<div>
 						<h4>内野制造商</h4>
 						<span>29元起</span>
-						<a href="#" class="scaleImg"><img src="images/img_04.jpg"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_04.jpg"/></a>
 					</div>
 				</div>
 			</div>
@@ -318,8 +318,8 @@
 						<li>
 							<span class="colorNum">2色可选</span>
 							<a href="#">
-								<img src="images/img_05.png"/>
-								<img src="images/img_05.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_05.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_05.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#">网易智造减压眼部按摩仪</a>
@@ -329,8 +329,8 @@
 						<li>
 							<span class="colorNum">3色可选</span>
 							<a href="#">
-								<img src="images/img_06.png"/>
-								<img src="images/img_06.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_06.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_06.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 唤自然·棉麻透气夏凉被</a>
@@ -340,8 +340,8 @@
 						<li>
 							<span class="colorNum">2色可选</span>
 							<a href="#">
-								<img src="images/img_07.png"/>
-								<img src="images/img_07.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_07.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_07.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 林音系列实木床</a>
@@ -351,8 +351,8 @@
 						<li>
 							<span class="colorNum">4色可选</span>
 							<a href="#">
-								<img src="images/img_08.png"/>
-								<img src="images/img_08.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_08.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_08.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 新色 奢华植鞣头层水牛皮席三件套</a>
@@ -362,8 +362,8 @@
 						<li>
 							<span class="colorNum">2色可选</span>
 							<a href="#">
-								<img src="images/img_09.png"/>
-								<img src="images/img_09.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_09.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_09.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 日式咖喱 150克</a>
@@ -373,8 +373,8 @@
 						<li>
 							<span class="colorNum">2色可选</span>
 							<a href="#">
-								<img src="images/img_10.png"/>
-								<img src="images/img_10.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_10.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_10.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 有机皇菊 0.6克*20朵</a>
@@ -384,8 +384,8 @@
 						<li>
 							<span class="colorNum">2色可选</span>
 							<a href="#">
-								<img src="images/img_11.png"/>
-								<img src="images/img_11.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_11.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_11.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 可裸睡纯棉便携睡袋</a>
@@ -395,8 +395,8 @@
 						<li>
 							<span class="colorNum">2色可选</span>
 							<a href="#">
-								<img src="images/img_12.png"/>
-								<img src="images/img_12.jpg"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_12.png"/>
+								<img class="original" src="images/empty.gif" data-original="images/img_12.jpg"/>
 							</a>
 							<div class="title">
 								<a href="#"> 舒压奢享按摩椅</a>
@@ -430,7 +430,7 @@
 				<div class="content clearfix">
 					<div class="box">
 						<span class="colorNum">1色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_13.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_13.png"/></a>
 						<div class="title">
 							<a href="#">简约陶瓷马克杯</a>
 							<p>￥14</p>
@@ -438,7 +438,7 @@
 					</div>
 					<div class="box">
 						<span class="colorNum">2色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_14.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_14.png"/></a>
 						<div class="title">
 							<a href="#"> 浓缩即食燕窝 70克*3瓶 99%</a>
 							<p>￥24</p>
@@ -446,7 +446,7 @@
 					</div>
 					<div class="box">
 						<span class="colorNum">3色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_15.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_15.png"/></a>
 						<div class="title">
 							<a href="#"> 网易智造N520除螨吸尘器</a>
 							<p>￥34</p>
@@ -454,7 +454,7 @@
 					</div>
 					<div class="box">
 						<span class="colorNum">4色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_16.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_16.png"/></a>
 						<div class="title">
 							<a href="#"> 多功能人体工学转椅</a>
 							<p>￥44</p>
@@ -462,7 +462,7 @@
 					</div>
 					<div class="box">
 						<span class="colorNum">5色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_17.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_17.png"/></a>
 						<div class="title">
 							<a href="#"> 24寸 纯PC“铝框”（非全铝）拉杆箱</a>
 							<p>￥44</p>
@@ -470,7 +470,7 @@
 					</div>
 					<div class="box">
 						<span class="colorNum">6色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_18.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_18.png"/></a>
 						<div class="title">
 							<a href="#"> 英伦温莎轻雅双肩包 13L</a>
 							<p>￥44</p>
@@ -478,7 +478,7 @@
 					</div>
 					<div class="box">
 						<span class="colorNum">7色可选</span>
-						<a href="#" class="scaleImg"><img src="images/img_19.png"/></a>
+						<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_19.png"/></a>
 						<div class="title">
 							<a href="#"> 日式和风声波式电动牙刷（可单买刷头）</a>
 							<p>￥44</p>
@@ -626,7 +626,7 @@
 				</div>
 				<div class="boxWrap right">
 					<div class="limitBox clearfix">
-						<a href="#" class="left scaleImg"><img src="images/img_20.png"/></a>
+						<a href="#" class="left scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_20.png"/></a>
 						<div class="right">
 							<a href="#" class="title">复古翻帮休闲女鞋</a>
 							<p>翻帮设计，复古法国风</p>
@@ -641,7 +641,7 @@
 						</div>
 					</div>
 					<div class="limitBox clearfix">
-						<a href="#" class="left scaleImg"><img src="images/img_23.png"/></a>
+						<a href="#" class="left scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_23.png"/></a>
 						<div class="right">
 							<a href="#" class="title">复古翻帮休闲女鞋</a>
 							<p>翻帮设计，复古法国风</p>
@@ -656,7 +656,7 @@
 						</div>
 					</div>
 					<div class="limitBox clearfix">
-						<a href="#" class="left scaleImg"><img src="images/img_21.png"/></a>
+						<a href="#" class="left scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_21.png"/>></a>
 						<div class="right">
 							<a href="#" class="title">复古翻帮休闲女鞋</a>
 							<p>翻帮设计，复古法国风</p>
@@ -671,7 +671,7 @@
 						</div>
 					</div>
 					<div class="limitBox clearfix">
-						<a href="#" class="left scaleImg"><img src="images/img_22.png"/></a>
+						<a href="#" class="left scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_22.png"/></a>
 						<div class="right">
 							<a href="#" class="title">复古翻帮休闲女鞋</a>
 							<p>翻帮设计，复古法国风</p>
@@ -723,25 +723,25 @@
 				</div>
 			</header>
 			
-			<a href="#" class="categoryBigImg"><img src="images/img_24.jpg"/></a>
+			<a href="#" class="categoryBigImg"><img class="original" src="images/empty.gif" data-original="images/img_24.jpg"/></a>
 			<ul class="categoryList">
 				<li>
-					<a href="#" class="scaleImg"><img src="images/img_25.png"/></a>
+					<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_25.png"/></a>
 					<p><a href="#">日式记忆棉坐垫</a></p>
 					<span>￥49</span>
 				</li>
 				<li>
-					<a href="#" class="scaleImg"><img src="images/img_26.png"/></a>
+					<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_26.png"/></a>
 					<p><a href="#">日式记忆棉坐垫</a></p>
 					<span>￥49</span>
 				</li>
 				<li>
-					<a href="#" class="scaleImg"><img src="images/img_27.png"/></a>
+					<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_27.png"/></a>
 					<p><a href="#">日式记忆棉坐垫</a></p>
 					<span>￥49</span>
 				</li>
 				<li>
-					<a href="#" class="scaleImg"><img src="images/img_28.png"/></a>
+					<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_28.png"/></a>
 					<p><a href="#">日式记忆棉坐垫</a></p>
 					<span>￥49</span>
 				</li>
@@ -759,7 +759,7 @@
 					<div class="carouselImgCon">
 						<ul>
 							<li>
-								<a href="#" class="scaleImg"><img src="images/img_29.jpg"/></a>
+								<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_29.jpg"/></a>
 								<div>
 									<p>塞****微 2018-03-29 17:37</p>
 									<p class="clearfix">
@@ -772,7 +772,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="#" class="scaleImg"><img src="images/img_30.jpg"/></a>
+								<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_30.jpg"/></a>
 								<div>
 									<p>塞****微 2018-03-29 17:37</p>
 									<p class="clearfix">
@@ -785,7 +785,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="#" class="scaleImg"><img src="images/img_31.jpg"/></a>
+								<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_31.jpg"/></a>
 								<div>
 									<p>塞****微 2018-03-29 17:37</p>
 									<p class="clearfix">
@@ -798,7 +798,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="#" class="scaleImg"><img src="images/img_32.jpg"/></a>
+								<a href="#" class="scaleImg"><img class="original" src="images/empty.gif" data-original="images/img_32.jpg"/></a>
 								<div>
 									<p>塞****微 2018-03-29 17:37</p>
 									<p class="clearfix">
