按钮与圆点

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 					<a href="#"><img src="images/pic_04.jpg"/></a>
 					<a href="#"><img src="images/pic_05.jpg"/></a>
 				</div>
-				<div class="prev"><</div>
+				<!--<div class="prev"><</div>
 				<div class="next">></div>
 				<div class="circle">
 					<span class="active"></span>
@@ -262,7 +262,7 @@
 					<span></span>
 					<span></span>
 					<span></span>
-				</div>
+				</div>-->
 			</div>
 		</div>
 		
@@ -872,7 +872,10 @@
 			<a href="javascript:;" class="back">回顶部</a>
 		</div>
 		
+		<script src="js/move.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/Carousel.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+		
 	</body>
 </html>
