轮播图功能（透明度运动，位移运动）

--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
 						</li>
 					</ul>
 				</div>
-				<div class="prev"><</div>
-				<div class="next">></div>
+				<!--<div class="prev"><</div>
+				<div class="next">></div>-->
 			</div>
 		</section>
 		
