fix倒计时bug 对接json数据

--- a/index.html
+++ b/index.html
@@ -875,6 +875,7 @@
 		<script src="js/move.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Carousel.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/limitTime.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 		
 	</body>
