限时购余量进度条&数据导入

--- a/index.html
+++ b/index.html
@@ -812,8 +812,8 @@
 							</li>
 						</ul>
 					</div>
-					<div class="prev"><</div>
-					<div class="next">></div>
+					<!--<div class="prev"><</div>
+					<div class="next">></div>-->
 				</div>
 			</div>
 		</section>
