--- a/product.html
+++ b/product.html
@@ -679,5 +679,10 @@
 			<a href="javascript:;" class="back">回顶部</a>
 		</div>
 	</body>
+	
+	
+	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/product_listData.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/product.js" type="text/javascript" charset="utf-8"></script>
 </html>
 
