产品型号信息导入

--- a/product.html
+++ b/product.html
@@ -257,7 +257,7 @@
 		<!--面包屑-->
 		<section id="position">
 			<div class="center">
-				<a href="#">首页</a> > <a href="#">其它</a> > <a href="#">数码</a> > 网易智造空气感苹果手机壳
+				<!--<a href="#">首页</a> > <a href="#">其它</a> > <a href="#">数码</a> > 网易智造空气感苹果手机壳-->
 			</div>
 		</section>
 		
@@ -282,7 +282,7 @@
 					<div><span>服务</span><a href="#" class="service"><i></i>30天无忧退货<i></i>48小时快速退款<i></i>满88元免邮费<i></i>网易自营品牌</a></div>
 				</div>
 				<div class="format">
-					<dl class="clearfix">
+					<!--<dl class="clearfix">
 						<dt>型号</dt>
 						<dd class="">iPhone 7</dd>
 						<dd>iPhone 7 Plus</dd>
@@ -291,7 +291,7 @@
 						<dt>颜色</dt>
 						<dd class="">清透黑</dd>
 						<dd>纯净白</dd>
-					</dl>
+					</dl>-->
 				</div>
 				<div class="number clearfix">
 					<span class="nTitle">数量</span>
