--- a/product.html
+++ b/product.html
@@ -316,7 +316,7 @@
 				<div class="content clearfix" id="lookPic">
 					<div class="carouselImgCon">
 						<ul>
-							<li>
+							<!--<li>
 								<a href="#"><img src="images/img_40.png"/></a>
 								<a href="#">网易智造安卓快充数据线</a>
 								<span>￥18</span>
@@ -355,11 +355,11 @@
 								<a href="#"><img src="images/img_47.png"/></a>
 								<a href="#">网易智造安卓快充数据线</a>
 								<span>￥18.00</span>
-							</li>
+							</li>-->
 						</ul>
 					</div>
-					<div class="prev noClick"><</div>
-					<div class="next">></div>
+					<!--<div class="prev noClick"><</div>
+					<div class="next">></div>-->
 				</div>
 			</div>
 		</section>
@@ -682,7 +682,10 @@
 	
 	
 	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/move.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/Carousel.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/product_listData.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/recommend_data.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/product.js" type="text/javascript" charset="utf-8"></script>
 </html>
 
