--- a/product.html
+++ b/product.html
@@ -370,15 +370,14 @@
 				<!--详情评价-->
 				<div class="product">
 					<div class="title">
-						<a href="javascript:;" class="active">详情</a>
-						<a href="javascript:;">评价<span> (200)</span></a>
+						<a href="javascript:;" class="active">详情</a><a href="javascript:;">评价<span> (200)</span></a>
 					</div>
 					
 					<div class="content">
 						<!--详情选项卡内容-->
-						<div class="detail" style="display: none;">
+						<div class="detail">
 							<table>
-								<tr>
+								<!--<tr>
 									<td>型号</td>
 									<td>iPhone 7/7 Plus</td>
 									<td>厚度</td>
@@ -395,11 +394,11 @@
 									<td>iPhone 7/7 Plus</td>
 									<td>厚度</td>
 									<td>0.4mm</td>
-								</tr>
+								</tr>-->
 							</table>
 							<div class="img">
-								<p><img src="images/img_48.jpg"/></p>
-								<img src="images/img_49.jpg"/>
+								<!--<p><img src="images/img_48.jpg"/></p>
+								<img src="images/img_49.jpg"/>-->
 							</div>
 							<div class="problem">
 								<h3>常见问题</h3>
@@ -431,7 +430,7 @@
 						</div>
 						
 						<!--评价选项卡内容-->
-						<div class="evaluate">
+						<div class="evaluate"  style="display: none;">
 							<div class="border">
 								<div class="eTitle clearfix">
 									<div class="active"><i></i><span>全部(200)</span></div>
