--- a/product.html
+++ b/product.html
@@ -370,7 +370,7 @@
 				<!--详情评价-->
 				<div class="product">
 					<div class="title">
-						<a href="javascript:;" class="active">详情</a><a href="javascript:;">评价<span> (200)</span></a>
+						<a href="javascript:;" class="active">详情</a><a href="javascript:;">评价<span> </span></a>
 					</div>
 					
 					<div class="content">
@@ -685,6 +685,7 @@
 	<script src="js/Carousel.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/product_listData.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/recommend_data.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/comment_data.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/product.js" type="text/javascript" charset="utf-8"></script>
 </html>
 
