--- a/product.html
+++ b/product.html
@@ -576,7 +576,7 @@
 									</ul>
 							</div>
 							<div class="page">
-								<span>首页</span>
+								<!--<span>首页</span>
 								<span>上一页</span>
 								<div class="mainPage">
 									<span class="active">1</span>
@@ -591,7 +591,7 @@
 									<span>10</span>
 								</div>
 								<span>下一页</span>
-								<span>尾页</span>
+								<span>尾页</span>-->
 							</div>
 						</div>
 					</div>
