购物车滚动条

--- a/product.html
+++ b/product.html
@@ -119,6 +119,51 @@
 											<div class="price">￥219.00</div>
 											<div class="close">×</div>
 										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
 									</ul>
 									<div class="scrollBar">
 										<span class="topBtn"></span>
