--- a/product.html
+++ b/product.html
@@ -174,7 +174,7 @@
 									</div>
 								</div>
 								<div class="total">
-									商品合计：<span>￥751.00</span><a href="#">去购物车结算</a>
+									商品合计：<span><!--￥751.00--></span><a href="#">去购物车结算</a>
 								</div>
 							</div>
 						</div>
@@ -348,7 +348,7 @@
 				</div>
 				<div class="btn">
 					<a href="#" class="buy">立即购买</a>
-					<a href="#" class="join">加入购物车</a>
+					<a href="javascript:;" class="join">加入购物车</a>
 					<a href="#" class="collection">收藏</a>
 				</div>
 			</div>
